--- a/API/package.json
+++ b/API/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "node-oracledb": "^1.0.2"
+    "node-oracledb": "^1.0.2",
+    "oracledb": "^5.5.0"
   }
 }
